--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,11 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "typeRoots": [
+      "node_modules/@types",
+      "types"
+    ],
   },
   "files": [
     "src/main.ts",
